# my-data-model

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
schemas/v3.4.0+/: model.json
src/my_data_model/: __about__.py  __init__.py  main.py
