[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-data-model"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = []
authors = [
  { name = "joao-parana", email = "joao.parana@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "behave",
  # O PEP 621, que define o formato do arquivo pyproject.toml, não suporta a expansão
  # de variáveis ou a construção de caminhos de arquivo relativos ao diretório do projeto
  # Por esse motivo somos obrigados a copiar de packages/* para /tmp/packages
  # "pandaspi@file:///tmp/packages/pandaspi-v1.0.0.zip",
  # "opendsb@file:///tmp/packages/opendsb-2.1.3.tar.gz",
  "pyright",
  "black",
  "ruff",
  "psutil",
  "tomli",
  "pandas",
  "uvicorn",
  "fastapi",
]

[project.urls]
Documentation = "https://github.com/joao-parana/my-data-model#readme"
Issues = "https://github.com/joao-parana/my-data-model/issues"
Source = "https://github.com/joao-parana/my-data-model"

[tool.hatch.version]
path = "src/my_data_model/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/my_data_model tests}"

[tool.coverage.run]
source_pkgs = ["my_data_model", "tests"]
branch = true
parallel = true
omit = [
  "src/my_data_model/__about__.py",
]

[tool.coverage.paths]
my_data_model = ["src/my_data_model", "*/my-data-model/src/my_data_model"]
tests = ["tests", "*/my-data-model/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

